force-app/main/default/objects/AccountBOS__c/AccountBOS__c.object-meta.xml
<CustomObject>
    <label>Account BO Specialist</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Account BO Specialist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account BO Specialists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>