force-app/main/default/objects/AccountBOS__c/fields/BODivision__c.field-meta.xml
<CustomField>
    <fullName>BODivision__c</fullName>
    <formula>CASE(TEXT(User__r.BusinesDivision__c),
&apos;Pipes&apos;,&apos;Pipe Products&apos;,
&apos;Railway&apos;,&apos;Railway Products&apos;,
&apos;Steel&apos;,&apos;Steel Products&apos;,
&apos;PRD&apos;,&apos;Product &amp; Resource Dept.&apos;,
&apos;Marketing&apos;,&apos;Marketing&apos;,
&apos;IT&apos;,&apos;IT Department&apos;,
&apos;TOP&apos;,&apos;Top Management&apos;,
&apos;Customer&apos;,&apos;Customer&apos;,
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BO Business Division</label>
    <type>Text</type>
</CustomField>