force-app/main/default/objects/AccountBOS__c/fields/BOSegment__c.field-meta.xml
<CustomField>
    <fullName>BOSegment__c</fullName>
    <formula>CASE(User__r.SalesDivision__c,
&apos;00001&apos;, &apos;Americas&apos;,
&apos;00002&apos;, &apos;MENA&apos;,
&apos;00004&apos;, &apos;Europe&apos;,
&apos;00005&apos;, &apos;IPS&apos;,
&apos;00006&apos;, &apos;KLW&apos;,
&apos;00010&apos;, &apos;CIS&apos;,
&apos;00011&apos;, &apos;Ukraine&apos;,
&apos;00016&apos;, &apos;Customs Union&apos;,
&apos;00019&apos;, &apos;Vallourec&apos;,
&apos;00020&apos;, &apos;ETA&apos;,
&apos;00021&apos;, &apos;Machinery&apos;,
&apos;No Segment&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BO Segment</label>
    <type>Text</type>
</CustomField>