force-app/main/default/objects/AccountBOS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>User__c</columns>
    <columns>BOSType__c</columns>
    <columns>BODivision__c</columns>
    <columns>BOSegment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>